--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,10 +1,13 @@
 
 
-.mytitle {
-  color:#fff;
-}
-
 
 .header {
-  
+    background:#efeded;
+    display: flex;
+    justify-content: center;
+    padding: 1.25rem 0;
+}
+
+.header img {
+  height: 2em;
 }
