--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -2,12 +2,18 @@
 
 
 .header {
-    background:#efeded;
+    background:var(--gray-800);
     display: flex;
     justify-content: center;
     padding: 1.25rem 0;
+    gap:1.5rem;
+}
+
+.header h1 {
+  font-size: 1.75rem;
 }
 
 .header img {
   height: 2em;
+  object-fit: cover;
 }
