--- a/src/global.css
+++ b/src/global.css
@@ -26,5 +26,6 @@ body {
 body, input, textarea, button {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
+  /* font-size: 16px; */
   font-size: 1rem;
 }
