--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -1,16 +1,26 @@
 
 .sidebar {
   background-color: var(--gray-300);
-  height: 16rem;
+  height: 18rem;
   width: 20rem;
   margin: 3rem;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
-
-.sidebar img {
-  width: 100%;
-  height: calc(60%);
+.sidebar .profile {
+  margin: 0;
+  width: 100%; 
+  height: 6rem;
   object-fit: cover;
+}
+.sidebar .avatar {
+  margin-top: calc(0px - 2.5rem + 6px);
+}
+.sidebar .avatar img {
+  border-radius: 5px;
+  width: calc(5rem + 12px);
+  height: calc(5rem + 12px);
+  border:solid 4px var(--gray-800);
+  outline: solid 2px var(--green-500);  
 }
