--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -1,18 +1,20 @@
 
 .sidebar {
-  background-color: var(--gray-300);
-  height: 18rem;
-  width: 20rem;
+  background-color: var(--gray-800);
+  height: 24rem;
+  width: 18rem;
   margin: 3rem;
   display: flex;
   flex-direction: column;
   align-items: center;
+  border-radius: 7px;
 }
 .sidebar .profile {
   margin: 0;
   width: 100%; 
   height: 6rem;
   object-fit: cover;
+  border-radius: 7px 7px 0 0;
 }
 .sidebar .avatar {
   margin-top: calc(0px - 2.5rem + 6px);
@@ -24,3 +26,13 @@
   border:solid 4px var(--gray-800);
   outline: solid 2px var(--green-500);  
 }
+.sidebar strong {
+  font-size: 1.25rem;
+  color:var(--gray-300);
+  margin:0.75rem auto;
+}
+.sidebar p {
+  color:var(--gray-500)
+}
+
+
