--- a/src/global.css
+++ b/src/global.css
@@ -1,3 +1,8 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 :root {
   --white: #fff;
   --gray-100: #e1e1e6;
@@ -26,6 +31,6 @@ body {
 body, input, textarea, button {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
-  /* font-size: 16px; */
+  font-size: 16px;
   font-size: 1rem;
 }
